// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html normalizer <Label onClick=doClick..">Hello, World</Label> 1`] = `
Object {
  "actual": "<Label onClick=\\"doClick..\\" xmlns=\\"http://www.w3.org/1999/xhtml\\">Hello, World</Label>",
  "warning": Array [
    "[xmldom warning]	attribute \\"onClick\\" missed start quot(\\")!!
@#[line:1,col:1]",
  ],
}
`;

exports[`html normalizer <div a=& a="&''" b/> 1`] = `
Object {
  "actual": "<div a=\\"&amp;''\\" b=\\"b\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></div>",
  "fatalError": Array [
    "[xmldom fatalError]	Attribute a redefined
@#[line:1,col:1]",
  ],
  "warning": Array [
    "[xmldom warning]	attribute \\"&\\" missed quot(\\")!!
@#[line:1,col:1]",
    "[xmldom warning]	attribute \\"b\\" missed value!! \\"b\\" instead!!
@#[line:1,col:1]",
  ],
}
`;

exports[`html normalizer <div a=& bb c d=123&&456/> 1`] = `
Object {
  "actual": "<div a=\\"&amp;\\" bb=\\"bb\\" c=\\"c\\" d=\\"123&amp;&amp;456\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></div>",
  "warning": Array [
    "[xmldom warning]	attribute \\"&\\" missed quot(\\")!!
@#[line:1,col:1]",
    "[xmldom warning]	attribute \\"bb\\" missed value!! \\"bb\\" instead2!!
@#[line:1,col:1]",
    "[xmldom warning]	attribute \\"c\\" missed value!! \\"c\\" instead2!!
@#[line:1,col:1]",
    "[xmldom warning]	attribute \\"123&&456\\" missed quot(\\")!
@#[line:1,col:1]",
  ],
}
`;

exports[`html normalizer <div test="a<b&&a< c && a>d"></div> 1`] = `
Object {
  "actual": "<div test=\\"a&lt;b&amp;&amp;a&lt; c &amp;&amp; a>d\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></div>",
}
`;

exports[`html normalizer <div test="alert('<br/>')"/> 1`] = `
Object {
  "actual": "<div test=\\"alert('&lt;br/>')\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></div>",
}
`;

exports[`html normalizer <div>&amp;&lt;123&456<789;&&</div> 1`] = `
Object {
  "actual": "<div xmlns=\\"http://www.w3.org/1999/xhtml\\">&amp;&lt;123&amp;456&lt;789;&amp;&amp;</div>",
  "error": Array [
    "[xmldom error]	element parse error: Error: invalid tagName:789;&&<
@#[line:1,col:22]",
  ],
}
`;

exports[`html normalizer <div>&nbsp;&copy;&nbsp&copy</div> 1`] = `
Object {
  "actual": "<div xmlns=\\"http://www.w3.org/1999/xhtml\\"> ©&amp;nbsp&amp;copy</div>",
}
`;

exports[`html normalizer <div><123e>&<a<br/></div> 1`] = `
Object {
  "actual": "<div xmlns=\\"http://www.w3.org/1999/xhtml\\">&lt;123e>&amp;&lt;a<br/></div>",
  "error": Array [
    "[xmldom error]	element parse error: Error: invalid tagName:123e
@#[line:1,col:6]",
    "[xmldom error]	element parse error: Error: invalid tagName:a<br
@#[line:1,col:13]",
  ],
}
`;

exports[`html normalizer <html test="123"/> 1`] = `
Object {
  "actual": "<html test=\\"123\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
}
`;

exports[`html normalizer <html test="a<b && a>b && '&amp;&&'"/> 1`] = `
Object {
  "actual": "<html test=\\"a&lt;b &amp;&amp; a>b &amp;&amp; '&amp;&amp;&amp;'\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
}
`;

exports[`html normalizer <html xmlns:x="1"><body/></html> 1`] = `
Object {
  "actual": "<html xmlns:x=\\"1\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"><body></body></html>",
}
`;

exports[`html normalizer <r><Label onClick="doClick..>Hello, World</Label></r> 1`] = `
Object {
  "actual": "<r xmlns=\\"http://www.w3.org/1999/xhtml\\">&lt;Label onClick=\\"doClick..>Hello, World</r>",
  "error": Array [
    "[xmldom error]	element parse error: Error: attribute value no end '\\"' match
@#[line:1,col:4]",
  ],
}
`;

exports[`html normalizer text/html: script <script src="./test.js"/> 1`] = `
Object {
  "actual": "<script src=\\"./test.js\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></script>",
}
`;

exports[`html normalizer text/html: script <script>alert(a<b&&c?"<br/>":">>");</script> 1`] = `
Object {
  "actual": "<script xmlns=\\"http://www.w3.org/1999/xhtml\\">alert(a<b&&c?\\"<br/>\\":\\">>\\");</script>",
}
`;

exports[`html normalizer text/html: script <script>alert(a<b&&c?"<br>":">>");</script> 1`] = `
Object {
  "actual": "<script xmlns=\\"http://www.w3.org/1999/xhtml\\">alert(a<b&&c?\\"<br>\\":\\">>\\");</script>",
}
`;

exports[`html normalizer text/html: script <textarea>alert(a<b&&c?"<br>":">>");</textarea> 1`] = `
Object {
  "actual": "<textarea xmlns=\\"http://www.w3.org/1999/xhtml\\">alert(a&lt;b&amp;&amp;c?\\"&lt;br>\\":\\">>\\");</textarea>",
}
`;

exports[`html normalizer text/xml: script <script src="./test.js"/> 1`] = `
Object {
  "actual": "<script src=\\"./test.js\\"/>",
}
`;

exports[`html normalizer text/xml: script <script>alert(a<b&&c?"<br/>":">>");</script> 1`] = `
Object {
  "actual": "<script>alert(a&lt;b&amp;&amp;c?\\"<br/>\\":\\">>\\");</script>",
  "error": Array [
    "[xmldom error]	element parse error: Error: attribute value must after \\"=\\"
@#[line:1,col:16]",
  ],
}
`;

exports[`html normalizer text/xml: script <script>alert(a<b&&c?"<br>":">>");</script> 1`] = `
Object {
  "actual": "<script>alert(a&lt;b&amp;&amp;c?\\"<br/>\\":\\">>\\");</script>",
  "error": Array [
    "[xmldom error]	element parse error: Error: attribute value must after \\"=\\"
@#[line:1,col:16]",
  ],
  "warning": Array [
    "[xmldom warning]	unclosed xml attribute
@#[line:1,col:23]",
  ],
}
`;

exports[`html normalizer text/xml: script <textarea>alert(a<b&&c?"<br>":">>");</textarea> 1`] = `
Object {
  "actual": "<textarea>alert(a&lt;b&amp;&amp;c?\\"<br/>\\":\\">>\\");</textarea>",
  "error": Array [
    "[xmldom error]	element parse error: Error: attribute value must after \\"=\\"
@#[line:1,col:18]",
  ],
  "warning": Array [
    "[xmldom warning]	unclosed xml attribute
@#[line:1,col:25]",
  ],
}
`;

exports[`html normalizer unclosed html <html title = 1/> 1`] = `
Object {
  "actual": "<html title=\\"1\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
  "warning": Array [
    "[xmldom warning]	attribute \\"1\\" missed quot(\\")!
@#[line:1,col:1]",
  ],
}
`;

exports[`html normalizer unclosed html <html title =1/2></html> 1`] = `
Object {
  "actual": "<html title=\\"1/2\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
  "warning": Array [
    "[xmldom warning]	attribute \\"1/2\\" missed quot(\\")!
@#[line:1,col:1]",
  ],
}
`;

exports[`html normalizer unclosed html <html title/> 1`] = `
Object {
  "actual": "<html title=\\"title\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
  "warning": Array [
    "[xmldom warning]	attribute \\"title\\" missed value!! \\"title\\" instead!!
@#[line:1,col:1]",
  ],
}
`;

exports[`html normalizer unclosed html <html title= 1/> 1`] = `
Object {
  "actual": "<html title=\\"1\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"></html>",
  "warning": Array [
    "[xmldom warning]	attribute \\"1\\" missed quot(\\")!
@#[line:1,col:1]",
  ],
}
`;

exports[`html normalizer unclosed html <html><meta><link><img><br><hr><input></html> 1`] = `
Object {
  "actual": "<html xmlns=\\"http://www.w3.org/1999/xhtml\\"><meta/><link/><img/><br/><hr/><input/></html>",
}
`;
